# hf-se050-driver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci-cpp-analysis.yml  ci-docs-linkcheck.yml  ci-docs-publish.yml
_config/: 404.html  Doxyfile  _config.yml  lychee.toml
_config/doxygen-extensions/: README.md
_local_reference/: README.md
cmake/: hf_se050Config.cmake.in  hf_se050_build_settings.cmake
docs/: api_reference.md  cmake_integration.md  examples.md  hardware_setup.md  index.md  installation.md  platform_integration.md  quickstart.md  security_iot_ota_comms.md  troubleshooting.md
docs/datasheet/: README.md
examples/esp32/: CMakeLists.txt  README.md  app_config.yml  sdkconfig.defaults
examples/esp32/components/hf_se050/: CMakeLists.txt  idf_component.yml
examples/esp32/main/: CMakeLists.txt  se050_cloud_onboarding_example.cpp  se050_cloud_registration_packet_example.cpp  se050_minimal_example.cpp  se050_object_lifecycle_example.cpp  se050_secure_board_comms_example.cpp  se050_smoke_example.cpp
examples/esp32/main/include/: hf_se050_esp_i2c.hpp
examples/esp32/main/se050_aws_iot_lifecycle/: README.md  SECURITY.md  lifecycle_config.hpp  se050_aws_iot_lifecycle.cpp  stage_bootstrap.hpp  stage_control.hpp  stage_ota_verify.hpp  stage_provisioning.hpp  stage_telemetry.hpp  stage_tls_identity.hpp
examples/esp32/main/se050_aws_iot_lifecycle/tools/: README.md  factory_provision.py  generate_sbom.py  lambda_verify_telemetry.py  sign_reprovision_token.py  verify_telemetry.py
examples/esp32/main/se050_aws_iot_lifecycle/tools/tests/: conftest.py  test_reprov_token.py  test_telemetry_signature.py
inc/: se050_apdu.hpp  se050_applet.hpp  se050_atr.hpp  se050_commands.hpp  se050_crc.hpp  se050_device.hpp  se050_driver.hpp  se050_i2c_transport_interface.hpp  se050_scp03.hpp  se050_session.hpp  se050_t1_session.hpp  se050_tlv.hpp  se050_types.hpp  se050_version.h.in
scripts/: build_doxygen.sh
